[gd_scene load_steps=10 format=3 uid="uid://01tmnbmsfsnf"]

[ext_resource type="Texture2D" uid="uid://ddf0nv4i304v7" path="res://assets/godotcon_assets/godoot_sprite.png" id="1_b0kkn"]
[ext_resource type="Script" uid="uid://laaa2vdnnx3f" path="res://entities/player_controller.gd" id="2_b0kkn"]
[ext_resource type="PackedScene" uid="uid://bd32y81wfxa4l" path="res://ui/chat_ui.tscn" id="3_e4p34"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_e4p34"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_wwbr7"]
radius = 29.0

[sub_resource type="Animation" id="Animation_e4p34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b0kkn"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, -6), Vector2(3, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_rfe5m"]
resource_name = "walking"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.32, 0.69, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(3, -6), Vector2(3, -28), Vector2(3, -6), Vector2(4, -18), Vector2(3, -6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.32, 0.69, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0174548, 0.261799, 0.0174548, -0.349066, 0.0174548]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfe5m"]
_data = {
&"RESET": SubResource("Animation_e4p34"),
&"idle": SubResource("Animation_b0kkn"),
&"walking": SubResource("Animation_rfe5m")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 1.0
replication_config = SubResource("SceneReplicationConfig_e4p34")

[node name="PlayerSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.619608, 0.2, 1)
position = Vector2(3, -6)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_b0kkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_wwbr7")

[node name="PlayerController" type="Node" parent="."]
script = ExtResource("2_b0kkn")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)

[node name="ChatUi" parent="Camera2D" instance=ExtResource("3_e4p34")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rfe5m")
}

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = -54.0
offset_top = -122.0
offset_right = 53.0
offset_bottom = -60.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PlayerName"
horizontal_alignment = 1

[node name="PeerIdLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Peer Id"
horizontal_alignment = 1
